site/style.css
:root {
    --fg: white;
    --body-bg: rgb(25, 25, 25);
    --secondary-bg: rgba(135, 131, 120, 0.15);
    --secondary-bg-dark: #292827;
    --grey-text: #888;
    --grey-border: #333;
    --link-text: #bcc5ce;
    --link-border: #ddd;

    /* syntax highlighting, inspired by base16-bright colors colors copied from my
     * own alacritty config, which are in turn copied from
     * https://github.com/aaron-williamson/base16-alacritty */
    --red: #FF5E5E;  /* this red is stolen from notion instead. i like it more than base16's #fb0120 */
    --purple: #d381c3;
    --green: #a1c659;
    --blue: #6fb3d2;
    --orange: #fda331;
    --cyan: #75c7b7;
}

@media (prefers-color-scheme: light) {
    :root {
        --fg: rgb(25, 25, 25);
        --grey-text: #333;
        --body-bg: white;
        --link-text: #1e2a78;
        --link-border: #1e2a78;

        /* similar to base16-bright but for light mode
         * https://github.com/chriskempson/tomorrow-theme/blob/ccf6666d888198d341b26b3a99d0bc96500ad503/vim/colors/Tomorrow.vim#L7 */
        --red: #c82829;
        --purple: #8959a8;
        --green: #718c00;
        --blue: #4271ae;
        --orange: #f5871f;
        --cyan: #3e999f;
        /* --yellow: #eab700; */
    }
}

body {
    background: var(--body-bg);
    color: var(--fg);
    padding: 0;
    margin: 0;
    font: 1.125em/1.62 system-ui, sans-serif;
}

.bing {
    color: var(--body-bg);
    user-select: none;
    margin-top: -28px;
}

h1 {
    margin-top: 0;
    font-size: 1.6em;
}
h2 {
    font-size: 1.4em;
}
h2, .multi-heading {
    margin: 45px 0 15px;
}
h3 {
    font-size: 0.9em;
    margin: 30px 0 10px;
}

/* block level */
blockquote {
    border-left: 0.4em solid var(--secondary-bg);
    margin: 15px 0;
    padding: 0 15px;
}
blockquote blockquote {
    padding: 0 0 0 1em;
    margin-left: 2em;
}
p {
    font-weight: normal;
    margin: 20px 0;
}

.footnotes { font-size: 90%; }

hr {
    border: none;
    border-bottom: 1px solid var(--link-border);
}

ul, ol {
    margin: 14px 0;
    padding-left: 30px;
}
ul {
    list-style: square;
}
li ul {
    list-style: disc;
    margin: 8px 0;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
    border-color: var(--grey-border);
}
table tr:nth-child(2n) {
    background: var(--secondary-bg);

}
table th, table td {
    text-align: left;
    padding: 4px 6px;
}
/* span level */
img {
    max-width: 100%;
}
a, #likes {
    padding: 0;
    color: var(--link-text);
    background: none;
    cursor: pointer;
    overflow: hidden;
    word-wrap: break-word;
    text-decoration: none;
    border: none;
    border-bottom: 1px dotted var(--link-border);
}

a img {
    vertical-align: middle;
}

/* code */
pre, code, tt {
    font: 1em monospace;
    border: 1px solid var(--secondary-bg);
    border-radius: 3px;
}
pre {
    margin: 1em 0;
    padding: 8px;
    line-height: 1.5em;
    overflow: auto;
}
code, tt {
    color: var(--red);
    background-color: var(--secondary-bg);
    border-radius: 3px;
    padding: 1px 3px;
}
pre code {
    padding: 0;
    color: inherit;
    border: none;
    background: inherit;
    font-size: inherit;
}

header, nav, main, footer {
    max-width: 720px;
    *width: 720px;
    margin: 20px auto 50px;
    padding-left: 20px;
    padding-right: 20px;
}

h2#brand {
    margin-top: 0;
    font-size: inherit;
}

h2#brand:before, .back:before {
    content: "\2190";
}

footer {
    text-align: center;
    color: var(--grey-text);
    font-size: 0.75em;
}

footer a, footer #likes {
    margin: 0;
    color: var(--grey-text)
}

/* article */
main time {
    font-size: 0.9em;
    color: var(--grey-text);
}

.timeline, .timeline > ul {
    padding: 0;
}

.timeline time {
    margin: 0.1em 0.5em 0.1em 0;
    display: inline-block;
    /* this is just hardcoded based off of the width of some items in Work section
     * using em doesn't work properly
     * if you see this, please help, i have no idea what i'm doing
     * */
    min-width: 77px;
    text-align: right;
}

.timeline li {
    margin: 12px 0;
    list-style: none;
    zoom: 1;
}

.timeline p {
    margin: 0;
    padding: 0;
}

.code .builtin, pre .nb, pre .fm, .c-red, pre .kn {
    color: var(--red);
}

.code .keyword, pre .k, pre .cp, pre .kd, .c-purple, pre .ow {
    color: var(--purple);
}

.code .literal.string, pre .s2, pre .s, .c-green {
    color: var(--green);
}

pre .nd, pre .nf, .c-blue {
    color: var(--blue);
}

pre .mi, pre .kc, .c-orange {
    color: var(--orange);
}

.c-cyan {
    color: var(--cyan);
}

pre .c1 {
    color: var(--grey-text);
}

/* styles used by articles */
.align-left { float: left }
.align-right { float: right }

.multi-heading * {
    display: inline;
}

.multi-heading a {
    margin-left: 0.5em;
}

#likes {
    font-weight: inherit;
}

